Fix Lambda function and update contact form URL
- Fixed nodemailer.createTransporter -> createTransport typo
- Updated contact form action to new Lambda Function URL
- Added resource policy for Lambda Function URL access
- Cleaned up temporary test files
- Updated .gitignore to exclude test files and build artifacts

--- a/rickrothbart.html
+++ b/rickrothbart.html
@@ -1108,7 +1108,7 @@
       </div>
 
       <div class="card reveal">
-        <form class="contact-form" action="/contact" method="POST">
+        <form class="contact-form" action="https://k4jp7upqmcfmchbj35jb3jlojq0civky.lambda-url.us-west-1.on.aws/" method="POST">
           <div class="form-grid">
             <div class="form-group">
               <label for="name">Name</label>
